# VRCX-0

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG-beta.md  CHANGELOG.md  Cargo.toml  README.ja-JP.md  README.md  README.zh-CN.md  components.json  coverage.json  index.html  lint-staged.config.mjs  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.typecheck.json  vite.config.js  vite.config.ts  vitest.config.ts
crates/application/: Cargo.toml
crates/application/src/: auth_scope.rs  backend_runtime.rs  background.rs  background_capabilities.rs  config.rs  diagnostics.rs  error.rs  event_bus.rs  image_cache.rs  lib.rs  local_favorites.rs  mutual_graph_fetch.rs  process_monitor.rs  proxy.rs  runtime_lifecycle.rs  session.rs  sync.rs  task_supervisor.rs  vrchat_api.rs  web_client.rs
crates/application/src/auth_credentials/: mod.rs  service.rs  types.rs
crates/application/src/background_capabilities/: discord.rs  group_instances.rs  mod.rs  presence_automation.rs  presence_facts.rs  shared.rs
crates/application/src/game_client/: actions.rs  ipc.rs  lifecycle.rs  mod.rs  processor.rs  runtime.rs
crates/application/src/game_log/: host.rs  ingest.rs  instance_media.rs  lifecycle.rs  mod.rs  processor.rs  runtime.rs  runtime_state.rs  screenshot.rs  video.rs
crates/application/src/groups/: mod.rs  service.rs  types.rs
crates/application/src/log_watcher/: context.rs  event.rs  mod.rs  queue.rs  watcher.rs
crates/application/src/media_upload/: legacy.rs  mod.rs  preprocess.rs  types.rs
crates/application/src/moderation_sync/: mod.rs  service.rs  types.rs
crates/application/src/overlay_activity/: content.rs  conversions.rs  definitions.rs  mod.rs  runtime.rs  tests.rs  types.rs
crates/application/src/realtime/: connection.rs  current_user.rs  mod.rs  notifications.rs  output.rs  projection.rs  runtime_types.rs  user_cache.rs  ws_event_log.rs
crates/application/src/screenshots/: library.rs  metadata.rs  mod.rs  paths.rs  service.rs  thumbnail.rs
crates/application/src/social_baseline/: favorites.rs  friends.rs  mod.rs  remote.rs  service.rs  types.rs
crates/application/src/worker/: mod.rs  queue.rs
crates/application/src/world_cache/: mod.rs  runtime.rs
crates/host/: Cargo.toml
crates/host/src/: app_paths.rs  asset_bundle_cache.rs  calendar.rs  clipboard.rs  discord_rpc.rs  error.rs  error_log.rs  game_launch.rs  host_capabilities.rs  lib.rs  linux_registry.rs  local_player_moderations.rs  log_scanner.rs  path_utils.rs  process_status.rs  proxy.rs  shell_actions.rs  system_fonts.rs  vrchat_ipc.rs  vrchat_paths.rs  vrchat_registry.rs
crates/host/src/vr_overlay/: actor.rs  command.rs  mod.rs  noop.rs  openvr_backend.rs  policy.rs  status.rs  types.rs
crates/host/tests/: system_fonts.rs  vr_overlay_actor.rs
crates/media/: Cargo.toml
crates/media/src/: error.rs  image_cache.rs  image_processing.rs  lib.rs  media_files.rs  png.rs  screenshot_metadata.rs  screenshot_thumbnail.rs  ugc_image_files.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: avatars.rs  cache_entities.rs  cookies.rs  error.rs  favorites.rs  friends.rs  legacy_migration.rs  legacy_vrcx.rs  lib.rs  local_moderation.rs  memos.rs  mutual_graph.rs  player_list.rs  storage.rs  worlds.rs
crates/persistence/src/activity/: mod.rs  repository.rs  types.rs
crates/persistence/src/common/: mod.rs  params.rs  query.rs  row.rs  target.rs  value.rs
crates/persistence/src/config/: local.rs  mod.rs  repository.rs  schema.rs  tests.rs  types.rs
crates/persistence/src/database/: maintenance.rs  mod.rs  schema.rs  service.rs  sidecar.rs  value.rs
crates/persistence/src/feed/: mod.rs  query.rs  types.rs  write.rs
crates/persistence/src/game_log/: local_queries.rs  mod.rs  query.rs  schema.rs  tables.rs  tests.rs  types.rs  write.rs
crates/persistence/src/mcp_social/: tests.rs
crates/persistence/src/notifications/: mod.rs  query.rs  schema.rs  types.rs  write.rs
crates/persistence/src/realtime/: mod.rs  query.rs  schema.rs  types.rs  write.rs
crates/persistence/src/social_aggregates/: best_time.rs  caveats.rs  companions.rs  copresence.rs  fading.rs  graph.rs  helpers.rs  mod.rs  recall.rs  tests.rs  types.rs
crates/vrchat-client/: Cargo.toml
crates/vrchat-client/src/: auth.rs  avatars.rs  cookies.rs  favorites.rs  friends.rs  groups.rs  http_api.rs  image_fetcher.rs  instances.rs  lib.rs  media.rs  moderation.rs  notifications.rs  realtime.rs  search.rs  tools.rs  users.rs  web_client.rs  worlds.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  bindings_export.rs  bootstrap.rs  error.rs  lib.rs  macos_menu.rs  state.rs
src-tauri/src/adapters/: host_file_access.rs  ipc.rs  mod.rs
src-tauri/src/adapters/application/: context.rs  mod.rs
src-tauri/src/adapters/ipc/: linux.rs  windows.rs
src-tauri/src/adapters/log_watcher/: mod.rs  scanner.rs  tauri_compat.rs
src-tauri/src/api/: app.rs  asset_bundle.rs  database.rs  log_watcher.rs
src-tauri/src/api/app/: game.rs  host_capabilities.rs  ipc_commands.rs  moderation.rs  paths.rs  registry.rs  screenshots.rs  shell.rs
src-tauri/src/commands/: asset_bundle.rs  database.rs  discord.rs  log_watcher.rs  mod.rs  storage.rs  web.rs
src-tauri/src/commands/application/: assistant.rs  auth_scope.rs  background_mode.rs  group_quick_moderation.rs  lifecycle.rs  mcp_server.rs  mod.rs  moderation_sync.rs  overlay_activity.rs  realtime.rs  registry_backup.rs  vr_overlay.rs
src-tauri/src/commands/host/: app_launcher.rs  calendar.rs  clipboard.rs  error_log.rs  fonts.rs  game.rs  (+14 more)
src-tauri/src/domain/: app_paths.rs  asset_bundle_cache.rs  clipboard.rs  database.rs  discord_rpc.rs  game_launch.rs  host_capabilities.rs  image_cache.rs  ipc.rs  linux_registry.rs  log_watcher.rs  mod.rs  screenshot.rs  storage.rs  update.rs  vrchat_paths.rs
src-tauri/src/localization/: shell_locale.rs  shell_strings.json
tools/overlay-preview/: Cargo.toml  run-dev-preview.ps1
tools/overlay-preview/src/: fixtures.rs  main.rs
(+1684 files in other folders)
