[workspace]
members = [
    "src-tauri",
    "crates/core",
    "crates/persistence",
    "crates/integrations",
    "crates/vrchat-client",
    "crates/host",
    "crates/media",
    "crates/application",
    "crates/runtime-host",
    "crates/headless",
]
default-members = [
    "src-tauri",
    "crates/core",
    "crates/persistence",
    "crates/integrations",
    "crates/vrchat-client",
    "crates/host",
    "crates/media",
    "crates/application",
    "crates/runtime-host",
    "crates/headless",
]
resolver = "2"
