[package]
name = "vrcx-0"
version = "1.4.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "macos-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
reqwest = { version = "0.13", features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "multipart",
    "socks"
] }
tokio = { version = "1", features = ["sync", "macros", "time", "net", "io-util"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }
base64 = "0.22"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
sys-locale = "0.3"
tauri-plugin-window-state = "2"
percent-encoding = "2"
tauri-plugin-updater = "2.10.1"
vrcx-0-core = { path = "../crates/core" }
vrcx-0-persistence = { path = "../crates/persistence" }
vrcx-0-integrations = { path = "../crates/integrations" }
vrcx-0-host = { path = "../crates/host" }
vrcx-0-media = { path = "../crates/media" }
vrcx-0-application = { path = "../crates/application" }
vrcx-0-vrchat-client = { path = "../crates/vrchat-client" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes"
] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk-nvidia-quirk = "1"

[features]
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
image = "0.25"
vrcx-0-application = { path = "../crates/application", features = ["test-utils"] }
