[package]
name = "vrcx-0-host"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3"
base64 = "0.22"
chrono = "0.4"
dirs = "6"
hex = "0.4"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.39"
thiserror = "2"
tracing = "0.1"
url = "2"
vrcx-0-core = { path = "../core" }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Pipes",
    "Win32_System_Threading"
] }
winreg = "0.56"
