[package]
name = "vrcx-0-persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
dirs = "6"
rusqlite = { version = "0.39", features = ["bundled", "backup"] }
sea-query = { version = "0.32.7", default-features = false, features = ["backend-sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
vrcx-0-core = { path = "../core" }
