[package]
name = "vrcx-0-vrchat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
percent-encoding = "2"
reqwest = { version = "0.13", features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "multipart",
    "socks"
] }
reqwest_cookie_store = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
url = "2"
vrcx-0-core = { path = "../core" }
